<resources>
    <string name="app_name">Cure Quickly</string>
    <string name="activity_main">Activity Main</string>
    <string name="button">Button</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="app_login">App Login</string>
    <string name="app_sign_up">App Sign Up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="string_confirm_password" />
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="login">login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="no_account">No Account?</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_id">Email Id</string>
    <string name="govt_id">Govt Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="have_account">Have Account?</string>
    <string name="logIn">Login</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="have_an_account">Have An Account ?</string>
    <string name="coronavirus_disease_covid_19_is_an_infectious_disease_caused_by_a_newly_discovered_coronavirus_most_people_infected_with_the_covid_19_virus_will_experience_mild_to_moderate_respiratory_illness_and_recover_without_requiring_special_treatment_older_people_and_those_with_underlying_medical_problems_like_cardiovascular_disease_diabetes_chronic_respiratory_disease_and_cancer_are_more_likely_to_develop_serious_illness">
        coronavirus disease covid 19 is an infectious disease caused by a newly discovered coronavirus most people infected with the covid 19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment older people and those with underlying medical problems like cardiovascular disease diabetes chronic respiratory disease and cancer are more likely to develop Serious Illness
    </string>
    <string name="as_you_are_having_symptoms_of_covid_19_we_recommend_you_to_take_covid_test_as_soon_as_possible_in_order_to_reduce_the_spread_of_disease_we_insist_you_to_follow_basic_instructions_below">
        As you are having symptoms of Covid 19. We recommend you to take Covid Test as soon as possible in order to reduce the spreed of disease we insist you to follow basic instructions below
    </string>
    <string name="you_should_wash_your_hands_thoroughly_for_at_least_20_seconds">
        You should wash your hands thoroughly for at least 20 seconds.
    </string>
    <string name="please_maintain_a_distance_of_2m">
        Please maintain a distance of 2 meters.
    </string>
    <string name="please_wear_a_mask">
        Please Wear a Mask.
    </string>
    <string name="take_covid_test">
        Take Covid Test
    </string>
    <string name="do_you_have_following_symptoms">Do you have following Symptoms?</string>
    <string name="by_the_symptoms_that_you_have_selected_the_survey_we_find_that_you_are_highly_symptomatic_of_having_covid_19_below_are_the_list_of_hospitals_that_provide_covid_19_test">By the symptoms that you have selected the survey we find that you are highly symptomatic of
        having COVID 19 below are the list of hospitals that provide COVID 19 test.
    </string>
    <string name="trinity_hospital_and_heart_foundation_no_27_sri_rama_mandir_road_bangalore_south_560004_91_80_4150_3434">
        Trinity Hospital and Heart foundation, no 27, Sri Rama Mandir road, Bangalore South, 560004,
        +91 8041503434
    </string>
    <string name="m_s_ramaiah_narayana_heart_centre_msr_it_post_msr_nagar_new_bel_road_91_99800_21380">
        M S Ramaiah Narayana Heart Centre,MSR IT Post, MSR Nagar, New Bel Road
    </string>
    <string name="st_johns_institute_of_medical_sciences_sarjapur_road_john_nagar_koramangala_91_80_2206_5324">
    St. Johns Institute Of Medical Sciences, Sarjapur Road John Nagar Koramangala
    </string>
    <string name="isolate_for_10_days_from_the_time_their_covid_19_symptoms_started_or_from_the_date_they_tested_positive_as_long_as_that_includes_1_full_day_without_a_fever_and_other_symptoms_get_better_testing_usually_isn_t_needed_to_decide_when_to_stop_isolation">
Isolate for 10 days from the time their COVID-19 symptoms started, or from the date they tested positive, as long as that includes 1 full day without a fever and other symptoms get better. Testing usually is not needed to decide when to stop isolation.
    </string>

    <string name="cold">Cold</string>
    <string name="todo">Todo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fever">Fever</string>
    <string name="cough">Cough</string>
    <string name="body_pains">Body Pains</string>
    <string name="submit">SUBMIT</string>
    <string name="click_the_below_link_to_take_a_survey">Click the below link to take a Survey</string>
    <string name="take_survey">Take Survey</string>
    <string name="hello">Hello</string>
    <string name="log_out">Log Out</string>
    <string name="image_1">image 1</string>
    <string name="image_3">image 3</string>
    <string name="image_2">image 2</string>
    <string name="survey_result_and_hospitals_list">Survey Result and Hospitals List</string>

    <string name="image1">TODO</string>
    <string name="please_complete_the_following_survey_and_select_the_appropriate_answers_based_on_your_symptoms_we_will_tell_you_whether_you_have_covid_19_or_not_based_on_the_symptoms_you_have_selected">Please complete the following survey and select the appropriate answers based on your symptoms. We will tell you whether you have covid 19 or not based on the symptoms you have selected.</string>
    <string name="thank_you_for_taking_the_time_to_complete_the_survey_because_you_are_not_experiencing_any_of_the_symptoms_listed_in_the_survey_you_are_most_likely_not_infected_with_covid_19">Thank you for taking the time to complete the survey. Because you are not experiencing any of the symptoms listed in the survey, you are most likely not infected with COVID-19.</string>

</resources>