<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Positive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/testPositive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:background="#479EE3"
            android:gravity="center"
            android:text="@string/survey_result_and_hospitals_list"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/by_the_symptoms_that_you_have_selected_the_survey_we_find_that_you_are_highly_symptomatic_of_having_covid_19_below_are_the_list_of_hospitals_that_provide_covid_19_test"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/th" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trinity_hospital_and_heart_foundation_no_27_sri_rama_mandir_road_bangalore_south_560004_91_80_4150_3434"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ms" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/m_s_ramaiah_narayana_heart_centre_msr_it_post_msr_nagar_new_bel_road_91_99800_21380"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/st" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/st_johns_institute_of_medical_sciences_sarjapur_road_john_nagar_koramangala_91_80_2206_5324"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/isolate_for_10_days_from_the_moment_you_first_saw_covid_19_symptoms_or_from_the_date_you_tested_positive_as_long_as_you_don_t_have_a_fever_and_your_other_symptoms_improve_whether_deciding_when_to_end_isolation_testing_is_usually_not_required"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="162sp"
                android:layout_height="54sp"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:gravity="center"
                android:text="@string/log_out"
                android:textSize="16sp"
                app:backgroundTint="#479EE3" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>